# legged_hunter_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: hunter_controllers.yaml
launch/: display.launch.py  empty_world_low_resource.launch  hunter_simulation.launch.py
mujoco/: hunter.xml  hunter_scene.xml
rviz/: urdf.rviz
urdf/: hunter_ros2_control.xacro
