<package format="3">
  <name>legged_hunter_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for legged_hunter_description</p>
    <p>This package contains configuration data, 3D models and launch files for legged_hunter_description robot</p>
  </description>
  <maintainer email="contact@bridgedp.com">bridgedp</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>